alignment fixes

--- a/src/Components/ContactDetails/ContactDetails.css
+++ b/src/Components/ContactDetails/ContactDetails.css
@@ -16,10 +16,11 @@
 
 .contactdetails .main-bx {
     display: flex;
+    justify-content: space-between;
 }
 
 .contactdetails .main-bx .details-left {
-    width: 40%;
+    width: 50%;
     padding: 10px;
     border-right: 1px solid #D0D5DD;
 }
@@ -43,11 +44,12 @@
 
 .contactdetails .main-bx .details-left .item p {
     text-align: left;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
+    padding-left: 30px;
 }
 
 .contactdetails .main-bx form {
-    width: 55%;
+    width: 50%;
     padding-left: 50px;
     text-align: left;
 }
@@ -55,6 +57,7 @@
 .contactdetails .main-bx form .top {
     display: flex;
     gap: 20px;
+    margin-bottom: 20px;
 }
 
 .contactdetails .main-bx form label {
@@ -65,6 +68,14 @@
     font-weight: 500;
 }
 
+.contactdetails .main-bx form .box {
+    width: 100%;
+}
+
+.contactdetails .main-bx form .box input {
+    width: 100%;
+}
+
 .contactdetails .main-bx form input {
     background-color: #F6F6F6;
     border-radius: 4px;
@@ -72,6 +83,7 @@
     border: none;
     outline: none;
     margin-bottom: 10px;
+    box-sizing: border-box;
 }
 
 .contactdetails .main-bx form input.namee {
@@ -80,7 +92,8 @@
 
 .contactdetails .main-bx form input.msg {
     display: block;
-    width: 70%;
+    width: 100%;
+    margin-bottom: 28px;
 }
 
 .contactdetails .main-bx form button {
@@ -90,14 +103,15 @@
     color: #fff;
     display: inline-block;
     margin-top: 20px;
-    width: 78%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .map {
     border-radius: 12px;
     margin-bottom: 16px;
-    width: 400px;
-    height: 200px;
+    width: 565px;
+    height: 280px;
 }
 
 @media (max-width: 1280px) {
