--- a/src/Components/RecentBlog/RecentBlog.css
+++ b/src/Components/RecentBlog/RecentBlog.css
@@ -1,5 +1,5 @@
 .recentblog {
-    padding: 100px;
+    padding: 70px 100px;
     text-align: left;
 }
 
